--- a/contact.html
+++ b/contact.html
@@ -9,9 +9,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
    <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
-   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
 </head>
-<body>
+<body class="contact">
      <div id="box1">
         <nav class="nav1">
          <h2 class="logo"><a class="logo" href="index.html">Drawing Nest</a></h2>
@@ -23,26 +22,31 @@
         </nav>
         <div class="box2">
          <img src="images/logo.png" alt="logo" width="80">
-        </div>  
+        </div>   
      </div>
-     <div class="contentimage">
-        <h1>Unleash Your Creativity:</h1>
-        <h2> Learn, Practice, and Master the Art of Drawing with Us!</h2>
-        <img src="images/WEB-LOGO-WO-BACKGROUND.png" alt="logo" height="300">
-        <h2>Drawing Nest</h2>
-        <div class="space">
-         <a href="gallery.html">-
-        <button type="button">Get Started</button>
-         </a>
-        <p>click here! to start</p>
+     <div class="contactmargin">
+        <h2>WANT TO KEEP IN TOUCH<h2>
+        <h1>contact me!</h1>
+        <p>Here to answer and help any questions you u might have,
+        <br>whether you have questions about drawing techniques,
+        <br>need feedback on your artwork, or just want to share 
+        <br>your creative journey,here to help.</p>
         <br>
-        <br>
+        <p>here are my socials!</p>   
+        <div>
+            <a class="cont_bot" href="profile.html">
+                <button type="button">CLICK HERE</button>
+            </a>
         </div>
-        <div class="copyright">
-         <p>© 2024
-         <a href="index.html">DRAWING NEST.</a>
-         All rights reserved.</p>
-         </div>
-     </div> 
+        <div class="imgcontainer2">
+            <img class="img_prof2" src="images/contact_img.jpg.png" alt="background">
+         </div> 
+         <br>
+     </div>
+    <div class="copyright">
+        <p>© 2024
+        <a href="index.html">DRAWING NEST.</a>
+        All rights reserved.</p>
+        </div> 
 </body>
-</html>
+</html>     
